--- a/1_C++/suffix_count/Makefile
+++ b/1_C++/suffix_count/Makefile
@@ -2,14 +2,14 @@
 CC = g++
 CFLAGS = -std=c++14 -Werror -Wuninitialized -g
 
-run: build/test
-	./build/test
+run: test
+	./test
 
-build/test: build/catch_amalgamated.o src/*.h test-unit/test.cpp
-	$(CC) $(CFLAGS) -o build/test test-unit/test.cpp build/catch_amalgamated.o
+test: catch_amalgamated.o src/*.h test-unit/test.cpp
+	$(CC) $(CFLAGS) -o test test-unit/test.cpp catch_amalgamated.o
 
-build/catch_amalgamated.o: test-unit/catch/catch_amalgamated.cpp test-unit/catch/catch_amalgamated.hpp
-	$(CC) $(CFLAGS) -c -o build/catch_amalgamated.o test-unit/catch/catch_amalgamated.cpp
+catch_amalgamated.o: test-unit/catch/catch_amalgamated.cpp test-unit/catch/catch_amalgamated.hpp
+	$(CC) $(CFLAGS) -c -o catch_amalgamated.o test-unit/catch/catch_amalgamated.cpp
 
 clean:
-	rm -f build/test build/catch_amalgamated.o
+	rm -f test catch_amalgamated.o
